# OSAI_RSE_grobid_document_analysis

./: README.md  pyproject.toml
data/: papers.csv
outputs/links/: paper_01.txt  paper_03.txt  paper_04.txt  paper_05.txt  paper_06.txt  paper_07.txt  paper_08.txt  paper_09.txt  paper_10.txt
outputs/tei/: paper_01.tei.xml  paper_02.tei.xml  paper_03.tei.xml  paper_04.tei.xml  paper_05.tei.xml  paper_06.tei.xml  paper_07.tei.xml  paper_08.tei.xml  paper_09.tei.xml  paper_10.tei.xml
reports/: results_summary.csv
src/: analysis.py  grobid_client.py  tei_utils.py
tests/: test.py
